crates/strider-analyze/tests/snapshots/v3__x64__complex__bit_test_zero.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x401270:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "10" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" -> "10" [color="#88cc88", label=RAX, fontcolor="#cccccc", fontsize=9];
  "11" [label="const 0x2a:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v12" [label="Post Call\nRDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v12" [color="#888888", style=dashed];
  "v12" -> "10" [color="#88cc88", label=RDX, fontcolor="#cccccc", fontsize=9];
  "v13" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v13" [color="#888888", style=dashed];
  "v13" -> "10" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nXMM1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v14" [color="#888888", style=dashed];
  "v14" -> "10" [color="#88cc88", label=XMM1, fontcolor="#cccccc", fontsize=9];
  "9" [label="init\nRDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "15" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0xfffffffffffffffffffffffffffffffc:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "17" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" [label="StackStore u64\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "18" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v19" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v19" -> "17" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "20" -> "17" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x401325:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "18" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "21" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v22" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v22" -> "18" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "23" -> "18" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "24" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "25" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "25" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "26" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x401260:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "25" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "25" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "28" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "25" -> "28" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "25" -> "28" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "29" -> "28" [color="#88cc88", label=RAX, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x11:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v30" [label="Post Call\nRDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "25" -> "v30" [color="#888888", style=dashed];
  "v30" -> "28" [color="#88cc88", label=RDX, fontcolor="#cccccc", fontsize=9];
  "v31" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "25" -> "v31" [color="#888888", style=dashed];
  "v31" -> "28" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "v32" [label="Post Call\nXMM1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "25" -> "v32" [color="#888888", style=dashed];
  "v32" -> "28" [color="#88cc88", label=XMM1, fontcolor="#cccccc", fontsize=9];
  "26" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "33" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "33" [label="StackStore u64\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "18" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v34" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v34" -> "33" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "35" -> "33" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0x401311:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "36" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "36" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "38" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "38" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "40" -> "38" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "40" [label="init\nRDI", shape=Mdiamond, fillcolor="#1a3a5c"];
}
