crates/strider-analyze/tests/snapshots/v3__x64__complex__multi_arg_call_in_branch.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x401290:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "11" -> "5" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "12" -> "5" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "13" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" -> "13" [color="#88cc88", label=RAX, fontcolor="#cccccc", fontsize=9];
  "v15" [label="Post Call\nRDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v15" [color="#888888", style=dashed];
  "v15" -> "13" [color="#88cc88", label=RDX, fontcolor="#cccccc", fontsize=9];
  "v16" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v16" [color="#888888", style=dashed];
  "v16" -> "13" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "v17" [label="Post Call\nXMM1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v17" [color="#888888", style=dashed];
  "v17" -> "13" [color="#88cc88", label=XMM1, fontcolor="#cccccc", fontsize=9];
  "14" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "18" -> "14" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "18" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v21" [label="Post Call\nRAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v21" [color="#888888", style=dashed];
  "v21" -> "19" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "12" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "22" -> "12" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "22" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "22" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "23" [label="init\nRSI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="init\nECX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "11" -> "10" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "9" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "24" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "24" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "24" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "25" [label="init\nRDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "22" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "6" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "26" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "26" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "27" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v28" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v28" -> "26" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "29" -> "26" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x401397:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "27" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "30" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "30" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "31" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "31" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "32" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0x401290:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "34" -> "31" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "31" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "35" -> "31" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "11" -> "31" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "12" -> "31" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "36" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "31" -> "36" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "31" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "37" -> "36" [color="#88cc88", label=RAX, fontcolor="#cccccc", fontsize=9];
  "v38" [label="Post Call\nRDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "31" -> "v38" [color="#888888", style=dashed];
  "v38" -> "36" [color="#88cc88", label=RDX, fontcolor="#cccccc", fontsize=9];
  "v39" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "31" -> "v39" [color="#888888", style=dashed];
  "v39" -> "36" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "v40" [label="Post Call\nXMM1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "31" -> "v40" [color="#888888", style=dashed];
  "v40" -> "36" [color="#88cc88", label=XMM1, fontcolor="#cccccc", fontsize=9];
  "37" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "41" -> "37" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "41" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "42" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "42" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v44" [label="Post Call\nRAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "31" -> "v44" [color="#888888", style=dashed];
  "v44" -> "42" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "35" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "22" -> "35" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "34" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "11" -> "34" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "32" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "45" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "45" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "27" -> "45" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v46" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v46" -> "45" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "47" -> "45" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "47" [label="const 0x4013aa:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "48" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "48" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "50" -> "48" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "50" [label="init\nRDI", shape=Mdiamond, fillcolor="#1a3a5c"];
}
